# freebird-axum-backend

./: Cargo.toml
migrations/: 20250101000001_create_posts.sql
src/: config.rs  error.rs  main.rs  routes.rs
src/db/: mod.rs  models.rs
src/handlers/: admin.rs  health.rs  mod.rs  posts.rs
