[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web 框架
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 配置与工具
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
